--- a/bankproject/src/main/resources/application.properties
+++ b/bankproject/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=bankproject
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bank_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Min28783032!
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
