임시 게시판 파일

--- a/bankproject/build.gradle
+++ b/bankproject/build.gradle
@@ -59,6 +59,15 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.30' // Lombok annotation processor 추가
 	testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+
+	// QueryDSL
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	
+
 }
 
 tasks.named('test') {
