--- a/bankproject/src/main/resources/application.properties
+++ b/bankproject/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=bankproject
 server.port=8080
 
 #devtools
-spring.devtools.restart.enabled=true
+# spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
 #datasource
